# pardf

./: .gitignore  CHANGELOG.md  README.md  install.sh  pardf.spec  pyproject.toml  run-editor.py  run_pardf.py
beta3/: main.py
closebet2/: main.py
closebeta/: main.py
closenbeta/: main.py
debian/: changelog  control  copyright  debhelper-build-stamp  files  fospx-pdf-editor.desktop  fospx-pdf-editor.links  pardus-pdf-editor.desktop  pardus-pdf-editor.links  postinst  prerm  rules  word-sys-pdf-editor.desktop  word-sys-pdf-editor.links
debian/pardus-pdf-editor/DEBIAN/: control  md5sums
debian/pardus-pdf-editor/usr/lib/python3/dist-packages/pardus_pdf_editor/: main.py  models.py  pdf_handler.py  ui_components.py  undo_manager.py  utils.py  welcome_view.py  window.py
debian/word-sys-pdf-editor/DEBIAN/: control  md5sums
debian/word-sys-pdf-editor/usr/share/doc/word-sys-pdf-editor/: copyright
fospx_pdf_editor/: constants.py  i18n.py  main.py  pdf_handler.py  print_handler.py  ui_components.py  undo_manager.py  window.py
pardus-pdf-editor-project-3/debian/: changelog  files
pardus-pdf-editor-project-3/debian/pardus-pdf-editor/DEBIAN/: control  md5sums
pardus-pdf-editor-project/debian/pardus-pdf-editor/DEBIAN/: control  md5sums
pardus-pdf-editor-project/pardus_pdf_editor/: ui_components.py  utils.py
pardus-pdf-editor-projectfx/debian/: changelog  control  files  rules
pardus-pdf-editor-projectfx/debian/pardus-pdf-editor/DEBIAN/: control  md5sums
pardus-pdf-editor-projectfx/pardus_pdf_editor/: pdf_handler.py
pardus_pdf_editor/: models.py  pdf_handler.py  utils.py  welcome_view.py  window.py
pargel/pardf/: main.py
parpdf/: run-editor.py
parpdf/pardus_pdf_editor/: models.py  window.py
word_sys_pdf_editor/: constants.py  i18n.py  main.py  models.py  pdf_handler.py  print_handler.py  ui_components.py  undo_manager.py  utils.py  welcome_view.py  window.py
(+11 files in other folders)
