[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fospx-pdf-editor"
description = "An open-source tool for editing content in PDF files on Linux"
readme = "README.md"
authors = [
    { name = "Barın Güzeldemirci (word-sys) [FOSPX]" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF",
    "numpy",
    "pygobject"
]

[project.urls]
Homepage = "https://github.com/fospx-org/fospx-pdf-editor/"
Source = "https://github.com/fospx-org/fospx-pdf-editor/"
Issues = "https://github.com/fospx-org/fospx-pdf-editor/issues"
Releases = "https://github.com/fospx-org/fospx-pdf-editor/releases"

[tool.setuptools]
packages = ["fospx_pdf_editor"]

[tool.setuptools.dynamic]
version = {attr = "fospx_pdf_editor.constants.APP_VERSION"}

[project.gui-scripts]
fospx-pdf-editor = "fospx_pdf_editor.main:main"
